# structured_light_reconstructe

./: README.md
ADCensus/: CMakeLists.txt  adcensuscv.cpp  adcensuscv.h  aggregation.cpp  aggregation.h  common.h  disparityrefinement.cpp  disparityrefinement.h  imageprocessor.cpp  imageprocessor.h  libconfig.h++  main.cpp  myTest.cpp  scanlineoptimization.cpp  scanlineoptimization.h  stereoprocessor.cpp  stereoprocessor.h
graycode/: README.md
graycode/cpp/: CalPhase.cpp  CalPhase.h  CameraCalib.h  main.cpp
graycode/cpp/mydata/input/model1/: stereo_calib_images.xml
graycode/cpp/mydata/input/model2/: Rect_images_left.xml~
graycode/cpp/mydata/output/: extrinsics.yml  mls_points.pcd  pnts3D.txt  pnts3D_pcd.pcd
graycode2/: CMakeLists.txt  UnwrappedPhaseGrayCode.cpp  UnwrappedPhaseGrayCode.h  main.cpp
multifrequency/: README.md
multifrequency/cpp/: CMakeLists.txt  UnwrappedPhaseMFPS.cpp  UnwrappedPhaseMFPS_3_5.cpp  UnwrappedPhaseMFPS_3_6.cpp  main.cpp
multifrequency/matlab/: CreateAndSavePhaseShiftReq.m
test_1206/: CalPhase.cpp  CalPhase.h  CameraCalib.cpp  Propointcloud.cpp  main.cpp
test_1206/data/input/: Rect_images_right.xml  Rect_phase_images.xml
test_1206/data/output/: extrinsics.yml  mls_points.pcd  pnts3D.txt  pnts3D_pcd.pcd
test_1206/mydata/input/: Rect_images_left.xml  stereo_calib_images.xml
test_1206/mydata/input/model2/: Rect_phase_images.xml~  stereo_calib_images.xml~
test_1206/mydata/input/model2/Model21/: Rect_images_right.xml  phase_images.xml  stereo_calib_images.xml
test_1206/mydata/output/: series_phase_model1.txt
test_1212/: CalPhase.cpp  CameraCalib.cpp  main.cpp
test_1212/data/input/: Rect_images_left.xml  stereo_calib_images.xml
test_1212/data/output/: intrinsics.yml  pnts3D.txt  pnts3D_pcd.pcd
test_1220/: CMakeLists.txt  CameraCalib.cpp  CameraCalib.h  Propointcloud.cpp  StereoReconstruct.cpp  StereoReconstruct.h  main.cpp
test_1220/data/output/: intrinsics.yml  mls_points.pcd
test_12202/: CMakeLists.txt  CalPhase.cpp  CameraCalib.cpp  CameraCalib.h  FileManager.cpp  FileManager.h  PhaseProcess.cpp  Phase_Shift.kdev4  PointcloudProcess.cpp  PointcloudProcess.h  Propointcloud.cpp  StereoReconstruct.cpp  StereoReconstruct.h  main.cpp
test_12202/calib-data/: rightCameraCCF.txt
test_12202/input/: Rect_images.xml  phase_images.xml
test_12202/input/calib/: Left_Test_2.txt  Righ_Test_2.txt
test_12202/mydata/input/model2/: Rect_images_right.xml~  phase_images.xml~
test_12202/mydata/input/model2/Model21/: Rect_phase_images.xml
test_12202/mydata/output/: extrinsics.yml  intrinsics.yml  pnts3D.txt  pnts3D_pcd.pcd  series_phase_model1.txt
test_12202/result/: README.md  points3d.pcd  points3d_res.pcd  test.txt  说明.txt
test_12202/viewresult/: viewresult.m
test_1230/: PhaseProcess.cpp  PointcloudProcess.cpp
test_1230/input/: Rect_images_left.xml  extrinsics.yml  intrinsics.yml
test_1230/input/ccf/: leftCameraCCF.txt
test_1230/result/: phase_series.txt
test_1230/viewresult/: viewresult.m
test_123002/: UnwrappedPhaseMFPS.cpp  UnwrappedPhaseMFPS_3_6.cpp  main.cpp
test_123003/: CMakeLists.txt  CameraCalib.cpp  CameraCalib.h  FileManager.cpp  FileManager.h  PhaseProcess.h  StereoReconstruct.cpp  StereoReconstruct.h
test_123003/input/: Pattern_images_left.xml  Pattern_images_right.xml  Pattern_left.xml  Pattern_right.xml  Rect_images_right.xml
test_123003/input/1226_80x80/: Righ_Test_2.txt
test_123003/input/calib/: X3D_Test_2.txt
test_123004/: CMakeLists.txt  CameraApi.h  CameraApiLoad.h  CameraDefine.H  CameraStatus.h  auxiliaryfunctions.cpp  auxiliaryfunctions.h  calibration.cpp  calibration.h  camera_calibration.cpp  header.h  main.cpp  phaseshift.cpp  phaseshift.h  scan.cpp  scan.h  structuredlight.cpp  structuredlight.h
test_123004/output/calibration/camera/: slcalibration.xml
test_123004/output/calibration/extrinsic/: extrinsic.xml  extrinsic_corners.xml
test_123004/output/calibration/projector/: slcalibration.xml  slcalibration_corners.xml
test_123004/output/phaseshift/phaseshift_three/vertical/image/: pointCloud.x3d  simulation.m
test_200117/MicroPS-Code/Code/: MicroPhaseShiftingDecodeFunc.m  MicroPhaseShiftingDecodeScript.m  PhaseUnwrapCosSinValsToColumnIndex.m
test_200117/MicroPS-Code/Data/WaxBowl/16-05/: Frame001.tiff  Frame002.tiff  Frame003.tiff  Frame004.tiff  Frame005.tiff  Frame006.tiff  Frame007.tiff
test_200117/MicroPS-Code/Data/WaxBowl/16-08/: Frame001.tiff  Frame002.tiff  Frame003.tiff  Frame004.tiff  Frame005.tiff  Frame006.tiff  Frame007.tiff  Frame008.tiff  Frame009.tiff  Frame010.tiff
test_200117/MicroPS-Code/Data/WaxBowl/16-15/: Frame001.tiff  Frame002.tiff  Frame003.tiff  Frame004.tiff  Frame005.tiff  Frame006.tiff  Frame007.tiff  Frame008.tiff  Frame009.tiff  Frame010.tiff  Frame011.tiff  Frame012.tiff  Frame013.tiff  Frame014.tiff  Frame015.tiff  Frame016.tiff  Frame017.tiff
test_200117/MicroPS-Code/Data/WaxBowl/32-05/: Frame001.tiff  Frame002.tiff  Frame003.tiff  Frame004.tiff  Frame005.tiff  Frame006.tiff  Frame007.tiff
test_200117/MicroPS-Code/Data/WaxBowl/32-08/: Frame001.tiff  Frame002.tiff  Frame003.tiff  Frame004.tiff  Frame005.tiff  Frame006.tiff  Frame007.tiff  Frame008.tiff  Frame009.tiff  Frame010.tiff
test_200117/MicroPS-Code/Data/WaxBowl/32-15/: Frame001.tiff  Frame002.tiff  Frame003.tiff  Frame004.tiff  Frame005.tiff  Frame006.tiff  Frame007.tiff  Frame008.tiff  Frame009.tiff  Frame010.tiff  Frame011.tiff  Frame012.tiff  (+5 more)
test_200117/MicroPS-Code/ProjectedImages/16-05/: freqData.mat
test_200117/MicroPS-Code/ProjectedImages/16-08/: freqData.mat
test_200117/MicroPS-Code/ProjectedImages/16-15/: freqData.mat
test_200117/MicroPS-Code/ProjectedImages/32-05/: freqData.mat
test_200117/MicroPS-Code/ProjectedImages/32-08/: freqData.mat
test_200117/MicroPS-Code/ProjectedImages/32-15/: freqData.mat
test_200117/MicroPS-Code/ProjectedImages/64-05/: freqData.mat
test_200117/MicroPS-Code/ProjectedImages/64-08/: freqData.mat
test_200117/MicroPS-Code/ProjectedImages/64-15/: freqData.mat
test_200117/MicroPS_cpp/: CMakeLists.txt  main.cpp
(+44 files in other folders)
